--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/reset.css" type="text/css">
     <link rel="stylesheet" href="/assets/css/books_style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Raleway&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery.js"></script>
     <title>Reading List</title>
 </head>
