--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,30 +1,39 @@
-<h1>Reading List</h1>
+<header>
+    <h1>Reading List</h1>
+</header>
 
-<h2>Books to Read</h2>
+<section id="books-to-read">
+    <h2>Books to Read</h2>
 
-<ul>
-    {{#each books}}
-        {{#unless was_read}}
-            <li>{{title}} <button class="mark-read-button" data-id={{id}}>mark as read</button></li>
-        {{/unless}}
-    {{/each}}
-</ul>
+    <ul>
+        {{#each books}}
+            {{#unless was_read}}
+                <li>{{title}} <button class="mark-read-button" data-id={{id}}>mark as read</button></li>
+            {{/unless}}
+        {{/each}}
 
-<form action="/api/books/new" method="post" autocomplete="off">
-    <label for="new-book-title">Add a book:</label>
-    <input type="text" id="new-book-title" name="title" placeholder="Title">
-    <input type="submit" value="Submit">
-</form>
+        <li>
+            <form action="/api/books/new" method="post" autocomplete="off">
+                {{!-- <label for="new-book-title">Add a book:</label> --}}
+                <input type="text" id="new-book-title" name="title" placeholder="Title">
+                <input type="submit" value="Add book">
+            </form>
+        </li>
+    </ul>
 
-<h2>Books I've Read</h2>
+</section>
 
-<ul>
-    {{#each books}}
-        {{#if was_read}}
-            <li>{{title}}</li>
-        {{/if}}
-    {{/each}}
-</ul>
+<section id="books-have-read">
+    <h2>Books I've Read</h2>
+
+    <ul>
+        {{#each books}}
+            {{#if was_read}}
+                <li>{{title}}</li>
+            {{/if}}
+        {{/each}}
+    </ul>
+</section>
 
 <script>
     $(".mark-read-button").click(event => {
