--- a/public/assets/css/books_style.css
+++ b/public/assets/css/books_style.css
@@ -4,14 +4,11 @@ body {
     background-image: url("/assets/img/WoodTexture.svg");
     background-size: cover;
     background-color: rgb(170, 80, 29);
-    
+
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
-}
 
-li {
-    line-height: 1.5;
-    border-top: 1px solid rgba(94, 187, 230, 0.8);
+    padding: 1em;
 }
 
 h1, h2 {
@@ -23,22 +20,32 @@ h1 {
     font-size: 3rem;
 }
 
-h2 {
-    font-size: 2rem;
-}
-
 header {
     font-size: 3rem;
     
-    margin: 1rem auto;
+    margin: 0.3rem auto;
+    padding: 0.6rem;
     text-align: center;
-    width: 20rem;
 }
 
 header, #books-to-read, #books-have-read {
     background-color: rgba(255, 255, 255, 0.900);
-    padding: 0.5rem;
 
-    margin: 2rem auto;
-    width: 25rem;
+    max-width: 25rem;
+}
+
+#books-to-read, #books-have-read {
+    margin: 1.6rem auto;
+    padding: 0.3rem 0;
+}
+
+h2 {
+    font-size: 2rem;
+    padding: 0.5rem;
+}
+
+li {
+    line-height: 1.5;
+    border-top: 1px solid rgba(94, 187, 230, 0.8);
+    padding: 0 0.5rem;
 }
