--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
             <form action="/api/books/new" method="post" autocomplete="off">
                 {{!-- <label for="new-book-title">Add a book:</label> --}}
                 <input type="text" id="new-book-title" name="title" placeholder="Title">
-                <input type="submit" value="Add book">
+                <input type="submit" id="add-book-button" value="add book">
             </form>
         </li>
     </ul>
