--- a/public/assets/css/books_style.css
+++ b/public/assets/css/books_style.css
@@ -32,6 +32,8 @@ header, #books-to-read, #books-have-read {
     background-color: rgba(255, 255, 255, 0.900);
 
     max-width: 30rem;
+
+    box-shadow: -0.5px 0.5px 6px rgba(0, 0, 0, 0.5);
 }
 
 #books-to-read, #books-have-read {
